subscriber replace to ports, add cache repo and usecase, change postgres struct to jsonb for delivery/payment/[]item, add html template, update README.md
