# internal/order/ports/openapi_types.gen.go
@@ -3,10 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package ports
 
-import (
-	"time"
-)
-
 // Delivery defines model for Delivery.
 type Delivery struct {
 	Address string `json:"address"`
@@ -35,20 +31,20 @@ type Item struct {
 
 // Order defines model for Order.
 type Order struct {
-	CustomerID        string    `json:"customer_id"`
-	DateCreated       time.Time `json:"date_created"`
-	Delivery          Delivery  `json:"delivery"`
-	DeliveryService   string    `json:"delivery_service"`
-	Entry             string    `json:"entry"`
-	InternalSignature string    `json:"internal_signature"`
-	Items             []Item    `json:"items"`
-	Locale            string    `json:"locale"`
-	OofShard          string    `json:"oof_shard"`
-	OrderUID          string    `json:"order_uid"`
-	Payment           Payment   `json:"payment"`
-	Shardkey          string    `json:"shardkey"`
-	SmID              int       `json:"sm_id"`
-	TrackNumber       string    `json:"track_number"`
+	CustomerID        string   `json:"customer_id"`
+	DateCreated       string   `json:"date_created"`
+	Delivery          Delivery `json:"delivery"`
+	DeliveryService   string   `json:"delivery_service"`
+	Entry             string   `json:"entry"`
+	InternalSignature string   `json:"internal_signature"`
+	Items             []Item   `json:"items"`
+	Locale            string   `json:"locale"`
+	OofShard          string   `json:"oof_shard"`
+	OrderUID          string   `json:"order_uid"`
+	Payment           Payment  `json:"payment"`
+	Shardkey          string   `json:"shardkey"`
+	SmID              int      `json:"sm_id"`
+	TrackNumber       string   `json:"track_number"`
 }
 
 // Payment defines model for Payment.
@@ -64,24 +60,3 @@ type Payment struct {
 	RequestID    string `json:"request_id"`
 	Transaction  string `json:"transaction"`
 }
-
-// PostOrder defines model for PostOrder.
-type PostOrder struct {
-	CustomerID        string    `json:"customer_id"`
-	DateCreated       time.Time `json:"date_created"`
-	Delivery          Delivery  `json:"delivery"`
-	DeliveryService   string    `json:"delivery_service"`
-	Entry             string    `json:"entry"`
-	InternalSignature string    `json:"internal_signature"`
-	Items             []Item    `json:"items"`
-	Locale            string    `json:"locale"`
-	OofShard          string    `json:"oof_shard"`
-	OrderUID          string    `json:"order_uid"`
-	Payment           Payment   `json:"payment"`
-	Shardkey          string    `json:"shardkey"`
-	SmID              int       `json:"sm_id"`
-	TrackNumber       string    `json:"track_number"`
-}
-
-// CreateOrderJSONRequestBody defines body for CreateOrder for application/json ContentType.
-type CreateOrderJSONRequestBody = PostOrder
